--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my_blog",
   "version": "0.1.0",
   "private": true,
-  "homepage":".",
+  "homepage": ".",
   "dependencies": {
     "@ant-design/icons": "^4.0.5",
     "@babel/core": "7.9.0",
@@ -19,12 +19,13 @@
     "babel-plugin-import": "^1.13.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
-    "braft-editor": "^2.3.9",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "chalk": "^4.1.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "draft-js-prism": "^1.0.6",
     "es6-promise": "^4.2.8",
     "eslint": "^6.6.0",
     "eslint-config-react-app": "^5.2.1",
@@ -44,7 +45,6 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
-    "loadsh": "^0.0.4",
     "marked": "^1.1.1",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "^4.13.1",
@@ -55,15 +55,18 @@
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
+    "prismjs": "^1.22.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-loadable": "^5.5.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
+    "react-simplemde-editor": "^4.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "resolve": "1.15.0",
+    "resolve": "^1.15.0",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
@@ -79,7 +82,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "analyze": "source-map-explorer build/static/js/main.*"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -145,5 +149,8 @@
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
     ]
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.9.0"
   }
 }
