优化打包大小,antdicon优化成按需加载

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,22 @@
 {
   "plugins": [
-    ["import", {
-      "libraryName": "antd",
-      "style": "css"
-    }]
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "libraryDirectory": "es",
+        "style": "css"
+      }
+    ],
+    [
+      "import",
+      {
+        "libraryName": "@ant-design/icons",
+        "libraryDirectory": "es/icons",
+        "camel2DashComponentName": false
+      },
+      "@ant-design/icons"
+    ]
   ],
   "presets": [
     "react-app"
